apps/torrent/qbittorrent/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - image: lscr.io/linuxserver/qbittorrent:5.0.1
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 6881
              name: torrent
              protocol: TCP
            - containerPort: 6881
              name: torrent-udp
              protocol: UDP
          volumeMounts:
            - mountPath: /config/qBittorrent
              name: config-volume
            - mountPath: /downloads
              name: download-volume 
          securityContext:
            allowPrivilegeEscalation: false # Container run as root by design. Qbittorrent runs as user 1000
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: download-volume
          persistentVolumeClaim:
            claimName: qbittorrent-download-pvc
