apps/torrent/qbittorrent/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: torrent
      port: 6881
      protocol: TCP
      targetPort: torrent
    - name: torrent-udp
      port: 6881
      protocol: UDP
      targetPort: torrent-udp
  selector:
    app: qbittorrent
  type: ClusterIP
