apps/torrent/qbittorrent/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2.sarapuce.fr/oauth2/start?rd=https://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.nginx.svc.cluster.local/oauth2/auth
  name: qbittorrent-web-ui
  namespace: qbittorrent
spec:
  ingressClassName: public
  rules:
  - host: torrent.sarapuce.fr
    http:
      paths:
      - backend:
          service:
            name: qbittorrent-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - torrent.sarapuce.fr
    secretName: tls-secret
